Fixed scrollbar issue

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -90,3 +90,8 @@ body {
 #cursive_4 {
   font-family: 'Cookie', cursive;
 }
+
+.row {
+  margin-left: 0px !important;
+  margin-right: 0px !important;
+}
